// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AboutBuildModal should match snapshot for cloud edition 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal cloud"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[MockFunction]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <FormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "Mattermost",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MattermostLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          Mattermost
           
          <FormattedMessage
            defaultMessage="Cloud"
            id="about.cloudEdition"
          />
        </h3>
        <p
          className="subtitle"
        >
          <FormattedMessage
            defaultMessage="High trust messaging for the enterprise"
            id="about.enterpriseEditionSst"
          />
        </p>
        <div
          className="description"
        >
          <div>
            <FormattedMessage
              defaultMessage="Mattermost Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               3.6.2
            </span>
          </div>
        </div>
        <div
          className="form-group"
        >
          <FormattedMessage
            defaultMessage="Licensed to:"
            id="about.licensed"
          />
           Mattermost Inc
        </div>
        <div
          className="about-footer"
        >
          <injectIntl(FormattedMarkdownMessage)
            defaultMessage="Mattermost is made possible by the open source software used in our [server](!https://about.mattermost.com/platform-notice-txt/), [desktop](!https://about.mattermost.com/desktop-notice-txt/) and [mobile](!https://about.mattermost.com/mobile-notice-txt/) apps."
            id="about.notice"
          />
          <div
            className="copy-right"
          >
            <FormattedMessage
              defaultMessage="Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved"
              id="about.copyright"
              values={
                Object {
                  "currentYear": 2017,
                }
              }
            />
          </div>
        </div>
      </div>
      <div />
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should match snapshot for enterprise edition 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <FormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "Mattermost",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MattermostLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          Mattermost
           
          <FormattedMessage
            defaultMessage="Enterprise Edition"
            id="about.enterpriseEditione1"
          />
        </h3>
        <p
          className="about-modal__subtitle pb-2"
        >
          <FormattedMessage
            defaultMessage="Modern communication from behind your firewall."
            id="about.enterpriseEditionSt"
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Mattermost Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               3.6.2
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database Schema Version:"
              id="about.dbversion"
            />
            <span
              id="dbversionString"
            >
               3.6.0
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
            />
             Postgres
          </div>
        </div>
        <div
          className="form-group"
        >
          <FormattedMessage
            defaultMessage="Licensed to:"
            id="about.licensed"
          />
          <Nbsp />
          Mattermost Inc
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Learn more about Enterprise Edition at "
          id="about.enterpriseEditionLearn"
        />
        <a
          href="http://about.mattermost.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          about.mattermost.com
        </a>
      </div>
      <div
        className="form-group"
      >
        <div
          className="about-modal__copyright"
        >
          <FormattedMessage
            defaultMessage="Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved"
            id="about.copyright"
            values={
              Object {
                "currentYear": 2017,
              }
            }
          />
        </div>
        <div
          className="about-modal__links"
        >
          <a
            href="https://about.mattermost.com/default-terms/"
            id="tosLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FormattedMessage
              defaultMessage="Terms of Service"
              id="about.tos"
            />
          </a>
           - 
          <a
            href="https://about.mattermost.com/default-privacy-policy/"
            id="privacyLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FormattedMessage
              defaultMessage="Privacy Policy"
              id="about.privacy"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="about-modal__notice form-group pt-3"
    >
      <p>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Mattermost is made possible by the open source software used in our [server](!https://about.mattermost.com/platform-notice-txt/), [desktop](!https://about.mattermost.com/desktop-notice-txt/) and [mobile](!https://about.mattermost.com/mobile-notice-txt/) apps."
          id="about.notice"
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
        />
        <Nbsp />
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
        />
        <Nbsp />
        0123456789abcdef
        <br />
        <FormattedMessage
          defaultMessage="Webapp Build Hash:"
          id="about.hashwebapp"
        />
        <Nbsp />
        0a1b2c3d4f
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
        />
        <Nbsp />
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should match snapshot for team edition 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <FormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "Mattermost",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MattermostLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          Mattermost
           
          <FormattedMessage
            defaultMessage="Team Edition"
            id="about.teamEditiont0"
          />
        </h3>
        <p
          className="about-modal__subtitle pb-2"
        >
          <FormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Mattermost Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               3.6.2
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database Schema Version:"
              id="about.dbversion"
            />
            <span
              id="dbversionString"
            >
               3.6.0
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Join the Mattermost community at "
          id="about.teamEditionLearn"
        />
        <a
          href="http://www.mattermost.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          mattermost.org
        </a>
      </div>
      <div
        className="form-group"
      >
        <div
          className="about-modal__copyright"
        >
          <FormattedMessage
            defaultMessage="Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved"
            id="about.copyright"
            values={
              Object {
                "currentYear": 2017,
              }
            }
          />
        </div>
        <div
          className="about-modal__links"
        >
          <a
            href="https://about.mattermost.com/default-terms/"
            id="tosLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FormattedMessage
              defaultMessage="Terms of Service"
              id="about.tos"
            />
          </a>
           - 
          <a
            href="https://about.mattermost.com/default-privacy-policy/"
            id="privacyLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FormattedMessage
              defaultMessage="Privacy Policy"
              id="about.privacy"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="about-modal__notice form-group pt-3"
    >
      <p>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Mattermost is made possible by the open source software used in our [server](!https://about.mattermost.com/platform-notice-txt/), [desktop](!https://about.mattermost.com/desktop-notice-txt/) and [mobile](!https://about.mattermost.com/mobile-notice-txt/) apps."
          id="about.notice"
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
        />
        <Nbsp />
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
        />
        <Nbsp />
        <br />
        <FormattedMessage
          defaultMessage="Webapp Build Hash:"
          id="about.hashwebapp"
        />
        <Nbsp />
        0a1b2c3d4f
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
        />
        <Nbsp />
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should show ci if a ci build 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <FormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "Mattermost",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MattermostLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          Mattermost
           
          <FormattedMessage
            defaultMessage="Team Edition"
            id="about.teamEditiont0"
          />
        </h3>
        <p
          className="about-modal__subtitle pb-2"
        >
          <FormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Mattermost Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               ci
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database Schema Version:"
              id="about.dbversion"
            />
            <span
              id="dbversionString"
            >
               3.6.0
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Build Number:"
              id="about.buildnumber"
            />
            <span
              id="buildnumberString"
            >
               123
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Join the Mattermost community at "
          id="about.teamEditionLearn"
        />
        <a
          href="http://www.mattermost.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          mattermost.org
        </a>
      </div>
      <div
        className="form-group"
      >
        <div
          className="about-modal__copyright"
        >
          <FormattedMessage
            defaultMessage="Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved"
            id="about.copyright"
            values={
              Object {
                "currentYear": 2017,
              }
            }
          />
        </div>
        <div
          className="about-modal__links"
        >
          <a
            href="https://about.mattermost.com/default-terms/"
            id="tosLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FormattedMessage
              defaultMessage="Terms of Service"
              id="about.tos"
            />
          </a>
           - 
          <a
            href="https://about.mattermost.com/default-privacy-policy/"
            id="privacyLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FormattedMessage
              defaultMessage="Privacy Policy"
              id="about.privacy"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="about-modal__notice form-group pt-3"
    >
      <p>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Mattermost is made possible by the open source software used in our [server](!https://about.mattermost.com/platform-notice-txt/), [desktop](!https://about.mattermost.com/desktop-notice-txt/) and [mobile](!https://about.mattermost.com/mobile-notice-txt/) apps."
          id="about.notice"
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
        />
        <Nbsp />
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
        />
        <Nbsp />
        <br />
        <FormattedMessage
          defaultMessage="Webapp Build Hash:"
          id="about.hashwebapp"
        />
        <Nbsp />
        0a1b2c3d4f
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
        />
        <Nbsp />
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should show dev if this is a dev build 1`] = `
<Modal
  animation={true}
  aria-labelledby="aboutModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="aboutModalLabel"
    >
      <FormattedMessage
        defaultMessage="About {appTitle}"
        id="about.title"
        values={
          Object {
            "appTitle": "Mattermost",
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <MattermostLogo />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          Mattermost
           
          <FormattedMessage
            defaultMessage="Team Edition"
            id="about.teamEditiont0"
          />
        </h3>
        <p
          className="about-modal__subtitle pb-2"
        >
          <FormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Mattermost Version:"
              id="about.version"
            />
            <span
              id="versionString"
            >
               dev
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database Schema Version:"
              id="about.dbversion"
            />
            <span
              id="dbversionString"
            >
               3.6.0
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Join the Mattermost community at "
          id="about.teamEditionLearn"
        />
        <a
          href="http://www.mattermost.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          mattermost.org
        </a>
      </div>
      <div
        className="form-group"
      >
        <div
          className="about-modal__copyright"
        >
          <FormattedMessage
            defaultMessage="Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved"
            id="about.copyright"
            values={
              Object {
                "currentYear": 2017,
              }
            }
          />
        </div>
        <div
          className="about-modal__links"
        >
          <a
            href="https://about.mattermost.com/default-terms/"
            id="tosLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FormattedMessage
              defaultMessage="Terms of Service"
              id="about.tos"
            />
          </a>
           - 
          <a
            href="https://about.mattermost.com/default-privacy-policy/"
            id="privacyLink"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FormattedMessage
              defaultMessage="Privacy Policy"
              id="about.privacy"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="about-modal__notice form-group pt-3"
    >
      <p>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Mattermost is made possible by the open source software used in our [server](!https://about.mattermost.com/platform-notice-txt/), [desktop](!https://about.mattermost.com/desktop-notice-txt/) and [mobile](!https://about.mattermost.com/mobile-notice-txt/) apps."
          id="about.notice"
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
        />
        <Nbsp />
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
        />
        <Nbsp />
        <br />
        <FormattedMessage
          defaultMessage="Webapp Build Hash:"
          id="about.hashwebapp"
        />
        <Nbsp />
        0a1b2c3d4f
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
        />
        <Nbsp />
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;
